--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "sophsawczuk",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://sophsawczuk.github.io/sophsawczuk",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.2.0-beta1",
+    "gh-pages": "^4.0.0",
     "jquery": "^3.6.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -21,6 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
